# autogitignore

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: api.rs  app.rs  gitignore.rs  main.rs  models.rs  ui.rs
