[package]
name = "autogitignore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
directories = "6.0.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
